--- a/test/LlmTest.ipynb
+++ b/test/LlmTest.ipynb
@@ -308,7 +308,7 @@
     "llm_id = llm_ids[0]\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(llm_id, cache_dir=f\"/work/classtmp/{USER}/models\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(llm_id, device_map=\"auto\", cache_dir=\"f/work/classtmp/{USER}/models\", torch_dtype=torch.bfloat16, trust_remote_code=True)\n",
+    "model = AutoModelForCausalLM.from_pretrained(llm_id, device_map=\"auto\", cache_dir=f\"/work/classtmp/{USER}/models\", torch_dtype=torch.bfloat16, trust_remote_code=True)\n",
     "\n"
    ]
   },
